--- a/week-8/in-n-out-books/angular.json
+++ b/week-8/in-n-out-books/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "gpa-calculator-app3": {
+    "in-n-out-books": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "docs",
+            "outputPath": "dist/in-n-out-books",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/_theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "gpa-calculator-app3:build"
+            "browserTarget": "in-n-out-books:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "gpa-calculator-app3:build:production"
+              "browserTarget": "in-n-out-books:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "gpa-calculator-app3:build"
+            "browserTarget": "in-n-out-books:build"
           }
         },
         "test": {
@@ -89,7 +89,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -112,16 +111,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "gpa-calculator-app3:serve"
+            "devServerTarget": "in-n-out-books:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "gpa-calculator-app3:serve:production"
+              "devServerTarget": "in-n-out-books:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "gpa-calculator-app3"
+  "defaultProject": "in-n-out-books"
 }
